src/test/ui/const-generics/issues/issue-67945-3.min.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-67945-3.rs:9:27
   |
LL |         let x: Option<Box<Self>> = None;
   |                           ^^^^

error: aborting due to previous error

